# leitura-diaria

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: FUNDING.yml
app/: __init__.py  analysis.py  catalog.py  catalog_seed.py  config.py  content_tools.py  emailer.py  formatter.py  generator.py  lesson.py  mailer.py  main.py  models.py  openai_refiner.py  pdf_exporter.py  pdf_gen.py  pdf_raw.py  quality.py  read_feedback.py  reading_plan.py  refiner.py  run.py  state.py  utils.py  youtube.py
data/: books_365.json  books_catalog_2026.json
docs/: SETUP.md
tests/: test_ai_summary_parser.py  test_catalog_seed.py  test_email_body_format.py  test_emailer_mock.py  test_formatter_roundtrip.py  test_json_loading.py  test_lesson_guided_style.py  test_main_ai_generation.py  test_openai_refiner.py  test_pdf_filename.py  test_read_feedback.py  test_refinement_smoke.py  test_refiner_quality.py  test_state_idempotency.py  test_youtube_reference.py
